// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GreenButton disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: default;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #ecf7ec;
  color: #001833;
}

.c0:hover {
  background-color: #ecf7ec;
}

<button
  className="c0"
  color="secondary"
  disabled={true}
/>
`;

exports[`GreenButton renders 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0a0;
  color: #fff;
}

.c0:hover {
  background-color: #060;
  color: #fff;
}

<button
  className="c0"
  color="secondary"
/>
`;

exports[`GreenButton without disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  font-size: 14px;
  padding: 9.5px 18px;
  background-color: #0a0;
  color: #fff;
}

.c0:hover {
  background-color: #060;
  color: #fff;
}

<button
  className="c0"
  color="secondary"
/>
`;
